[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/Resources Minijuegos/Dagas/ventana dagas borde.png" type="Texture" id=1]
[ext_resource path="res://scenes/minijuegos/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Resources Minijuegos/Dagas/Dagas Fondo.png" type="Texture" id=3]
[ext_resource path="res://scenes/minijuegos/ritual.gd" type="Script" id=4]
[ext_resource path="res://soundes/minijoeg sfx momento dagas ritual.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/Resources Minijuegos/Dagas/dagas tapa.png" type="Texture" id=6]
[ext_resource path="res://assets/video/cinematica.webm" type="VideoStream" id=7]
[ext_resource path="res://shaders/GLES2 anim noise color.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/Resources Minijuegos/Dagas/dagas daga.png" type="Texture" id=9]
[ext_resource path="res://assets/Resources Minijuegos/Dagas/ventana dagas fondo.png" type="Texture" id=10]
[ext_resource path="res://soundes/sonido minijueg dagas.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/fondoloco pngs/wave 2k.png" type="Texture" id=12]
[ext_resource path="res://assets/FONDO NUEVO DAGAS/dagas FONDO B.png" type="Texture" id=13]
[ext_resource path="res://scenes/minijuegos/olas.gd" type="Script" id=14]
[ext_resource path="res://assets/FONDO NUEVO DAGAS/FONDO BLANK.png" type="Texture" id=15]
[ext_resource path="res://soundes/compa sale corriendo post dagas sfx.ogg" type="AudioStream" id=16]

[sub_resource type="CapsuleShape2D" id=11]
radius = 21.0
height = 268.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 46.0
height = 32.0

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 663, 496 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "compa_se_pira"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1434, 571 ), Vector2( 1843, 592 ) ]
}
tracks/1/type = "animation"
tracks/1/path = NodePath("../FondoBlank/Endanimation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "fade" ),
"times": PoolRealArray( 5.1 )
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1434, 569 ), Vector2( 1430, 566 ), Vector2( 1434, 572 ), Vector2( 1436, 569 ), Vector2( 1434, 569 ), Vector2( 1429, 571 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "open"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 663, 468 ), Vector2( 657, 316 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27, 244.875 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26, 262.062 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 28, 296.375 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 526, 10 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 25.5, 270 )

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Wave2k:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DagasFondoB:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DagasFondoB:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Wave2k:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=15]
resource_name = "blackout"
length = 15.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "emit_sound_zas"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DagasFondoB:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Wave2k:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, -1 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "iniciar_minijuego"
} ]
}

[sub_resource type="Animation" id=16]
resource_name = "pantallanegro"
length = 36.0

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 16 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Endanimation:reset_on_save")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=18]
resource_name = "fade"
length = 13.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 5.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 16 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 11.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 5.1, 12.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="ritual" type="Node2D"]
pause_mode = 2
z_index = -5
script = ExtResource( 4 )

[node name="VentanaLlavesFondo" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 10 )

[node name="Fondo2L" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 3 )

[node name="VentanaLlavesOutline" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 483, 579 )

[node name="Llave2A" parent="player" index="0"]
position = Vector2( 390, 25 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" parent="player" index="1"]
disabled = true

[node name="CollisionShape2D2" parent="player" index="2"]
position = Vector2( -322, -34 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="player"]
position = Vector2( -121, -28 )
rotation = 1.5708
shape = SubResource( 11 )

[node name="compa" type="KinematicBody2D" parent="."]
position = Vector2( 663, 496 )

[node name="Llave2B" type="Sprite" parent="compa"]
position = Vector2( -397, 27 )
texture = ExtResource( 9 )
flip_h = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="compa"]
position = Vector2( 302, -20 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="compa"]
autoplay = "idle"
anims/RESET = SubResource( 7 )
anims/compa_se_pira = SubResource( 12 )
anims/idle = SubResource( 8 )
anims/open = SubResource( 9 )

[node name="TapaFondo2" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 6 )

[node name="box" type="StaticBody2D" parent="."]
position = Vector2( 960, 540 )

[node name="Collisiongate" type="CollisionShape2D" parent="box"]
position = Vector2( -247, 17 )
scale = Vector2( 1.802, 1.809 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="box"]
position = Vector2( -6, -2.0625 )
scale = Vector2( 1.802, 1.809 )
shape = SubResource( 2 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="box"]
position = Vector2( -994, 38 )
scale = Vector2( 1.802, 1.809 )
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="box"]
position = Vector2( -5, -404 )
scale = Vector2( 1.802, 1.809 )
shape = SubResource( 13 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="box"]
position = Vector2( -18, 404 )
scale = Vector2( 1.802, 1.809 )
shape = SubResource( 13 )

[node name="video" type="Node2D" parent="."]
visible = false
z_index = -5

[node name="VideoPlayer" type="VideoPlayer" parent="video"]
margin_right = 1920.0
margin_bottom = 1080.0
stream = ExtResource( 7 )
autoplay = true

[node name="zas" type="AudioStreamPlayer" parent="video"]
stream = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="video"]
stream = ExtResource( 11 )

[node name="GLES2 anim noise color" parent="." instance=ExtResource( 8 )]
visible = false

[node name="lock" type="Area2D" parent="."]
position = Vector2( 484, 410 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="lock"]
position = Vector2( 372, 125 )
shape = SubResource( 10 )

[node name="AnimGeneral" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 14 )
anims/blackout = SubResource( 15 )

[node name="AnimacionGeneral" type="AnimationPlayer" parent="."]
autoplay = "pantallanegro"
anims/pantallanegro = SubResource( 16 )

[node name="Wave2k" type="Sprite" parent="."]
position = Vector2( 939, 656 )
scale = Vector2( 2.60637, 1.65047 )
texture = ExtResource( 12 )
script = ExtResource( 14 )

[node name="DagasFondoB" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 13 )

[node name="FondoBlank" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1006, 566 )
scale = Vector2( 1.12865, 1.17685 )
z_index = 20
texture = ExtResource( 15 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="FondoBlank"]
position = Vector2( 655.653, -8.49731 )
stream = ExtResource( 16 )

[node name="Endanimation" type="AnimationPlayer" parent="FondoBlank"]
anims/RESET = SubResource( 17 )
anims/fade = SubResource( 18 )

[connection signal="finished" from="video/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="body_entered" from="lock" to="." method="_on_lock_body_entered"]

[editable path="player"]
